--- a/.cproject
+++ b/.cproject
@@ -154,7 +154,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="StorageAT/test/|Utils/test/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules"/>
+						<entry excluding="StorageAT/test/|Utils/test/|Utils/build/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
 					</sourceEntries>
